# MacroPy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
datasets/: AlessandriMumtaz_Data.csv  EPU_Data.csv  EPU_US_Data.csv  PVAR_Data.csv  Peru_Data.csv  SW2001_Data.csv
notebooks/: tutorial_bvar.ipynb  tutorial_cvar.ipynb
src/MacroPy/: __init__.py  bpvar.py  bvar.py  cvar.py  data_handling.py  get_macrodata.py  lp.py  plots.py  plots_kalman.py  plots_tvarsv.py  priors.py  state_space.py  summary.py  tvarsv.py
src/MacroPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tutorials/: tutorial_api.ipynb  tutorial_bpvar.ipynb  tutorial_bvar.ipynb  tutorial_bvar_pandemic.ipynb  tutorial_cvar.ipynb  tutorial_localprojections.ipynb  tutorial_svar_vs_lp.ipynb  tutorial_tvarsv.ipynb
