[project]
name = "MacroPy"
version = "0.1.3"
description = "MacroPy Toolbox for Bayesian Macroeconometric Analysis in Python"
authors = [{ name = "Renato Vassallo", email = "renato.vassallo@bse.eu" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "scipy==1.15.2",
    "tqdm==4.67.1",
    "requests==2.32.3",
    "fredapi==0.5.2",
    "lxml==5.3.1",
    "plotnine==0.14.5",
    "mizani==0.13.1",
]

[dependency-groups]
dev = [
    "pyarrow>=20.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "xlsxwriter==3.2.2",
    "openpyxl==3.1.5",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

