[project]
name = "MacroPy"
version = "0.1.6"
description = "MacroPy Toolbox for Macroeconometric Analysis in Python"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Renato Vassallo", email = "renato.vassallo@bse.eu" }]
keywords = [
    "macroeconometrics",
    "bayesian-var",
    "panel-var",
    "local-projections",
    "forecasting",
    "economics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=2.2,<3",
    "pandas>=2.2,<3",
    "scipy>=1.15",
    "tqdm>=4.67",
    "requests>=2.32",
    "fredapi>=0.5",
    "lxml>=5.3",
    "plotnine>=0.14,<0.16",
    "mizani>=0.13,<0.15",
    "ipython>=8",
    "pycountry>=23",
]

[project.urls]
Homepage = "https://github.com/RenatoVassallo/MacroPy"
Repository = "https://github.com/RenatoVassallo/MacroPy"
Issues = "https://github.com/RenatoVassallo/MacroPy/issues"

[dependency-groups]
dev = [
    # Jupyter / notebook execution
    "pyarrow>=20.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "nbconvert>=7.16",
    "nbformat>=5.10",
    # Plotting + tabular IO
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2,<4",
    "openpyxl>=3.1,<4",
    # Environment management
    "python-dotenv>=1.1.0",
    # Classes / applied teaching notebooks (econometrics + ML stack)
    "scikit-learn>=1.4",
    "scikit-optimize>=0.10",   # BayesSearchCV
    "pmdarima>=2.0",           # auto_arima
    "xgboost>=2.0",            # requires libomp on macOS: brew install libomp
    "statsmodels>=0.14",       # SARIMAX backend for ARMA
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
